Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-8584

LiveCD doesn't start anymore since Svn revision 64222

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.3.17
    • NTCore, Tools
    • None

    Description

      Live CD doesn't start anymore since Svn commit revision 64222.
      After showing the menu and loading some files the screen stays black.
      There is a waring in the commit comment:
      WARNING: this breaks ntoskrnl reading hive files produced before this revision.
      I assume that the hive files produced by mkhive are no longer compatible to the code in ntoskrnl.

      Attachments

        Issue Links

          Activity

            People

              zefklop jgardou
              Thomas Kriese Thomas Kriese
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: