[MKHIVE] Use same code as ntoskrnl to create registry keys CORE-8584

svn path=/trunk/; revision=64497