reactos/tools/mkhive/cmindex.c
@@ -1,0 +1,1 @@
+#include "../../ntoskrnl/config/cmindex.c"
