reactos/tools/mkhive/cmname.c
@@ -1,0 +1,1 @@
+#include "../../ntoskrnl/config/cmname.c"
